# virtual-kubelet

./: .dockerignore  .envrc  .gitignore  .golangci.bck.yml  .golangci.yml  .goreleaser.yml  ADOPTERS.md  AUTHORS  CONTRIBUTING.md  DEBUGGING.md  Dockerfile  Gopkg.toml  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile.e2e  README.md  deps.md  doc.go  go.mod  go.sum  main.go  netlify.toml
.circleci/: config.yml
.github/: main.workflow
charts/: README.md  index.yaml  virtual-kubelet-0.1.0.tgz  virtual-kubelet-0.1.1.tgz  virtual-kubelet-0.1.3.tgz  virtual-kubelet-0.2.0.tgz  virtual-kubelet-0.3.0.tgz  virtual-kubelet-0.3.1.tgz  virtual-kubelet-0.3.2.tgz  virtual-kubelet-0.4.0.tgz  virtual-kubelet-0.5.0.tgz  virtual-kubelet-0.5.1.tgz  virtual-kubelet-1.2.1.3.tgz  virtual-kubelet-for-aks-0.1.0.tgz  virtual-kubelet-for-aks-0.1.10.tgz  virtual-kubelet-for-aks-0.1.2.tgz  virtual-kubelet-for-aks-0.1.3.tgz  virtual-kubelet-for-aks-0.1.5.tgz  virtual-kubelet-for-aks-0.1.6.tgz  virtual-kubelet-for-aks-0.1.7.tgz  virtual-kubelet-for-aks-0.1.8.tgz  virtual-kubelet-for-aks-0.1.9.tgz  virtual-kubelet-for-aks-latest.tgz  virtual-kubelet.tgz
cmd/: cencus_test.go  census.go  census_jaeger.go  census_ocagent.go  census_tracing.go  client.go  http.go  node.go  providers.go  root.go  taint.go  version.go
env/: env.go  env_internal_test.go
errdefs/: auth.go  doc.go  invalid.go  invalid_test.go  notfound.go  notfound_test.go  (+3 more)
providers/web/web-rust/: Cargo.toml  Dockerfile
providers/web/web-rust/scripts/: buildDocker.sh
providers/web/web-rust/src/: unit_provider.rs  utils.rs
(+615 files in other folders)
