[package]
name = "web-rust"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <rajave@microsoft.com>"]

[dependencies]
kube_rust = { git = "https://github.com/avranju/kube-rust", rev = "058de6366d0d75cb60b2d0fd5ba1abd2e7d83fff" }
virtual-kubelet-adapter = { git = "https://github.com/avranju/rust-virtual-kubelet-adapter", rev = "4250103d31e2864725e47bdd23295e79ee12b6d0"}
log = "0.4"
env_logger = "0.4"
time = "0.1"